# queens

./: .gitignore  PLAN.md  QUEENS.md  pyproject.toml
.zed/: settings.json
docs/: index.html
docs/algorithms/: difficulty.md  generation.md  regions.md  solver.md
docs/spec/: benchmark.md  generate.md  pages.md  share.md  validate.md
src/queens/: __init__.py  board.py  cli.py  difficulty.py  generator.py  placement.py  play.html  regions.py  render.py  share.py  solver.py
tests/: conftest.py  test_board.py  test_difficulty.py  test_generator.py  test_placement.py  test_regions.py  test_solver.py  test_spec.py
