[project]
name = "queens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "oscar-almashoor", email = "oscar.almashoor@auroraer.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
queens = "queens:main"

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"
